--- a/extensions/wishlist-icon/blocks/wishlist_icon.liquid
+++ b/extensions/wishlist-icon/blocks/wishlist_icon.liquid
@@ -1,33 +1,76 @@
-<div class="wishlist-icon">
-  <div>
-    WWWWW
-    
-  </div>
-  <div class="wishlist-svg">
-    <svg viewBox="0 0 200 200">
-      <path d="M100,30 
-               C120,-20 200,20 100,130 
-               C0,20 80,-20 100,30" />
+<div class="wishlist-inspire__icon" x-data="wishlist">
+
+  <button type="button" @click="addToWishlist()">
+    <svg class="wishlist-inspire__icon--svg" viewBox="0 0 24 24" stroke-width="2" stroke="#000" :fill="wishlisted ? '#000' : '#fff'">
+      <path d="M12 21.35l-1.45-1.32C5.4 15.73 2 12.27 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.77-3.4 7.23-8.55 11.53L12 21.35z"/>
     </svg>
-  </div>
+    {% if block.settings.text != blank %}
+      <span class="wishlist-inspire__icon--text">{{ block.settings.text }}</span>
+    {% endif %}
+  </button>
+
 </div>
 
+<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
+<script>
+    document.addEventListener('alpine:init', () => {
+        Alpine.data('wishlist', () => ({
+            wishlisted: false,
+ 
+            addToWishlist() {
+                this.wishlisted = ! this.wishlisted
+
+            }
+        }))
+    })
+</script>
 
 
 <style>
-.wishlist-svg{
-  width: 50px;
-  height: 50px;
-}
+  .wishlist-inspire__icon{
+    display: flex;
+    justify-content: center;
+    max-width: 44rem;
+  }
+  .wishlist-inspire__icon button{
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+  }
+  .wishlist-inspire__icon--svg{
+    width: 2rem;
+    height: 2rem;
+  }
 </style>
 {% schema %}
 {
-  "name": "Wishlist Icon",
+  "name": "Wishlist icon",
   "target": "section",
-  "text": "Wishlist",
   "settings": [
-    { "type": "product", "id": "product", "label": "product", "autofill": true },
-    { "type": "color", "id": "colour", "label": "Star Colour", "default": "#ff0000" }
+    {
+      "type": "product",
+      "id": "product",
+      "label": "product",
+      "autofill": true
+    },
+    {
+      "type": "text",
+      "id": "text",
+      "label": "Text",
+      "default": "Add to wishlist"
+    },
+    {
+      "type": "color",
+      "id": "colour",
+      "label": "Icon Colour",
+      "default": "#ff0000"
+    }
   ]
 }
 {% endschema %}
