--- a/extensions/wishlist-icon/blocks/wishlist_icon.liquid
+++ b/extensions/wishlist-icon/blocks/wishlist_icon.liquid
@@ -16,15 +16,36 @@
 <script>
     document.addEventListener('alpine:init', () => {
         Alpine.data('wishlist', () => ({
-            wishlisted: false,
- 
+            wishlisted: false,            
+            appUrl: "https://tales-violence-fingers-apart.trycloudflare.com",
             addToWishlist() {
-                this.wishlisted = ! this.wishlisted
+                this.wishlisted = ! this.wishlisted;
+                {% unless customer %} 
+                  alert('Please login to add to wishlist');
+                  return;  
+                {% endunless %}
+
+                const formdata = new FormData();
+                formdata.append("customerId", "{{customer.id}}");
+                formdata.append("productId", "{{product.id}}");
+                formdata.append("shop", "{{shop.permanent_domain}}");
+
+                const requestOptions = {
+                  method: "POST",
+                  body: formdata,
+                  redirect: "follow"
+                };
+
+                fetch(this.appUrl + "/api/wishlist", requestOptions)
+                  .then((response) => response.text())
+                  .then((result) => console.log(result))
+                  .catch((error) => console.error(error));
 
             }
         }))
     })
 </script>
+
 
 
 <style>
