--- a/extensions/wishlist-icon/blocks/wishlist_icon.liquid
+++ b/extensions/wishlist-icon/blocks/wishlist_icon.liquid
@@ -1,6 +1,6 @@
 <div class="wishlist-inspire__icon" x-data="wishlist">
 
-  <button type="button" @click="addToWishlist()">
+  <button type="button" @click.debounce="addToWishlist()">
     <svg class="wishlist-inspire__icon--svg" viewBox="0 0 24 24" stroke-width="2" stroke="#000" :fill="wishlisted ? '#000' : '#fff'">
       <path d="M12 21.35l-1.45-1.32C5.4 15.73 2 12.27 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.77-3.4 7.23-8.55 11.53L12 21.35z"/>
     </svg>
@@ -16,10 +16,20 @@
 <script>
     document.addEventListener('alpine:init', () => {
         Alpine.data('wishlist', () => ({
+          init(){
+            fetch(this.appUrl + "/api/wishlist"+"?customerId={{ customer.id }}&productId={{ product.id }}&shop={{ shop.permanent_domain }}")
+            .then(response => response.json())
+            .then(result => {
+              if(result.data.length > 0){
+                this.wishlisted = true;
+              }
+            })
+            .catch(error => console.log('error', error));
+          },
             wishlisted: false,            
-            appUrl: "https://tales-violence-fingers-apart.trycloudflare.com",
+            appUrl: "https://goat-has-suitable-converter.trycloudflare.com",
             addToWishlist() {
-                this.wishlisted = ! this.wishlisted;
+              
                 {% unless customer %} 
                   alert('Please login to add to wishlist');
                   return;  
@@ -29,6 +39,12 @@
                 formdata.append("customerId", "{{customer.id}}");
                 formdata.append("productId", "{{product.id}}");
                 formdata.append("shop", "{{shop.permanent_domain}}");
+                formdata.append("_action", "CREATE");
+
+                if(this.wishlisted){
+                  this.wishlisted = false;
+                  formdata.set("_action", "DELETE");
+                }
 
                 const requestOptions = {
                   method: "POST",
@@ -37,9 +53,15 @@
                 };
 
                 fetch(this.appUrl + "/api/wishlist", requestOptions)
-                  .then((response) => response.text())
-                  .then((result) => console.log(result))
-                  .catch((error) => console.error(error));
+                  .then(response => response.json())
+                  .then(result => {
+                    if(result.wishlisted){
+                          this.wishlisted = true;
+                        }else{
+                          this.wishlisted = false;
+                        }
+                  })
+                  .catch(error => console.error('error',error));
 
             }
         }))
